<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tables"
            android:icon="@drawable/ic_menu_tables"
            android:title="@string/menu_item_tables" />
        <item
            android:id="@+id/nav_elements_list"
            android:icon="@drawable/ic_default"
            android:title="@string/menu_item_elements_list" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_default"
            android:title="@string/menu_item_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_default"
            android:title="@string/menu_item_about" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_default"
            android:title="@string/menu_item_share" />
    </group>
</menu>